--- a/index.css
+++ b/index.css
@@ -274,9 +274,7 @@ nav {
   padding: 10px 23px;
 }
 
-.svgtreem{
-  display: none;
-}
+
 
 .skills {
   margin-top: 7rem;
@@ -371,6 +369,17 @@ nav {
   background: #2b0b3a;
   display: flex;
   align-items: end;
+  border-radius: 10px;
+}
+
+.project-right img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.project-right2 img{
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 .wrapper {
@@ -493,6 +502,9 @@ font-size: 25px
   width: 100%;
   margin-bottom: 2rem;
 }
+.card p{
+  margin-bottom: 0;
+ }
   
 }
 @media screen and (max-width:768px) {
@@ -503,9 +515,7 @@ font-size: 25px
   .svgtreem{
     display:block;
   }
-  .svgtree{
-    display: none;
-  }
+
  
   .intro-main h1 {
   font-size: 30px;
@@ -547,9 +557,7 @@ font-size: 25px
   padding: 0.5rem;
  }
 
- .card p{
-  margin-bottom: 0;
- }
+
   
 .main-container{
   margin: 0 5%;
